--- a/src/gatsby-theme-document/logo.mdx
+++ b/src/gatsby-theme-document/logo.mdx
@@ -1,3 +1,3 @@
 Document
 
-<!-- ![Logo](https://via.placeholder.com/215x40?text=Document) -->
+<!-- ![Logo](https://via.placeholder.com/215x40?text=COVID19-FAQ) -->
