Standardized link formatting

--- a/content/Background/2-why.mdx
+++ b/content/Background/2-why.mdx
@@ -7,7 +7,7 @@ There are a few reasons. COVID-19 is a novel virus, which means that many of its
 
 What is known, however, is problematic. 
 
-* First, the overall mortality rate for COVID-19, while not yet known with precision, appears to be substantially higher than this year's seasonal flu variant - approximately 1% (Source: [BBC](https://www.bbc.com/news/health-51674743)) versus a typical seasonal flu's 0.1%. 
+* First, the overall mortality rate for COVID-19, while not yet known with precision, appears to be substantially higher than this year's seasonal flu variant - [approximately 1%](https://www.bbc.com/news/health-51674743) versus a typical seasonal flu's 0.1%. 
 
     If those numbers are correct, COVID-19 would kill the same number of people in 1,800,000 infections that this year's seasonal flu has in over 33,000,000 infections. 
 
