Updated the README and a few other pages

--- a/content/Response/3-masks.mdx
+++ b/content/Response/3-masks.mdx
@@ -3,6 +3,6 @@ title: 'Do masks work?'
 description: 'This is concerning masks for COVID-19'
 ---
 
-There is little to no evidence that masks work in preventing the contraction of the disease, and the CDC and other health authorities [do not recommend them](https://www.cdc.gov/coronavirus/2019-ncov/faq.html). The Surgeon General, in fact, has asked the public to [stop purchasing them](https://www.nytimes.com/2020/02/29/health/coronavirus-n95-face-masks.html) for fear of depleting supplies for health professionals. 
+There is little to no evidence that masks work in preventing the contraction of the disease, and the CDC and other health authorities [do not recommend them](https://www.cdc.gov/coronavirus/2019-ncov/faq.html). The United States Surgeon General, in fact, has asked the public to [stop purchasing them](https://www.nytimes.com/2020/02/29/health/coronavirus-n95-face-masks.html) for fear of depleting supplies for health professionals. 
 
 Masks can, however, help reduce the spread of the disease from individuals that have already been infected.
