--- a/content/index.mdx
+++ b/content/index.mdx
@@ -8,4 +8,4 @@ The site is intended to answer basic questions about coronavirus disease 2019, c
 
 It is intended to be a curation of the various recommendations made by pubic health and media organizations worldwide. It is designed to serve as a central repository to assist those in the midst of an outbreak or preparing for same. It is not produced by medical professionals, but rather aggregates and presents their recommendations in one place. 
 
-![COVID-19](covid-19.jpg)
+![COVID-19](covid-19-b.jpg)
