--- a/content/Response/4-responses.mdx
+++ b/content/Response/4-responses.mdx
@@ -8,7 +8,8 @@ Numerous public health organizations included the [CDC](https://www.cdc.gov/coro
 Here are a few of the most common:
 
 ### Wash Your Hands
-Make a practice of washing your hands regularly, particularly before and after meals and after being in public spaces. WebMD has a good video illustrating [proper technique](https://twitter.com/WebMD/status/1233421719433510912); note that any soap will do - anti-bacterial is not necessary, and also that the water temperature is not critical. Be sure to wash vigorously for 20 seconds. 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d914EnpU4Fo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Make a practice of washing your hands regularly, particularly before and after meals and after being in public spaces. The above video illustrates the proper technique; note in particular that any soap will do - anti-bacterial is not necessary, and also that the water temperature is not critical. Be sure to wash vigorously for 20 seconds. 
 
 ### Social Distancing
 Maintain a distance of at least three feet away from anyone visibly sick. Depending on conditions in your local area, avoidance of large scale (concerts, sporting events, etc) or even small scale (grocery, restaurant, etc) venues may become necessary. 
