index.mdx: typo fix
Replaced "pubic" with "public"

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -6,7 +6,7 @@ description: "The site is intended to answer basic questions about coronavirus d
 
 The site is intended to answer basic questions about coronavirus disease 2019, commonly referred to as COVID-19. It pulls from global sources, but will be US-centric. 
 
-It is intended to be a curation of the various recommendations made by pubic health and media organizations worldwide. It is designed to serve as a central repository to assist those in the midst of an outbreak or preparing for same. It is not produced by medical professionals, but rather aggregates and presents their recommendations in one place. 
+It is intended to be a curation of the various recommendations made by public health and media organizations worldwide. It is designed to serve as a central repository to assist those in the midst of an outbreak or preparing for same. It is not produced by medical professionals, but rather aggregates and presents their recommendations in one place. 
 
 ![COVID-19](covid-19-b.jpg)
 (Photo by NIAID, used under [CC by 2.0](https://creativecommons.org/licenses/by/2.0/))
