--- a/content/Background/4-how-many.mdx
+++ b/content/Background/4-how-many.mdx
@@ -4,11 +4,11 @@ description: 'This describes the number of infections of COVID-19'
 ---
 
 ### What are the total infections for COVID-19?
-This number changes daily, but as of 3/2 the number is 90,914 total confirmed cases. 
+This number changes daily, but as of March 2 the number is 90,914 total confirmed cases. 
 
 A site maintained by Johns Hopkins CSSE [here](https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6) has the most up to date information the spread of the pathogen. 
 
 ### In the context of other infectious pathogens, is that a lot or a little?
-As of the week of 3/2, the CDC [reported](https://www.cdc.gov/flu/weekly/index.htm) "at least 32 million flu illnesses, 310,000 hospitalizations and 18,000 deaths from flu." Relative to those numbers, the overall COVID-19 totals to date are modest. 
+As of the week of March 2, the CDC [reported](https://www.cdc.gov/flu/weekly/index.htm) "at least 32 million flu illnesses, 310,000 hospitalizations and 18,000 deaths from flu." Relative to those numbers, the overall COVID-19 totals to date are modest. 
 
 Given its higher mortality rate, however, the unknown transmission rates and its growth in spite of containment efforts, the total infections to date are more alarming.
