--- a/content/Background/5-who-risk.mdx
+++ b/content/Background/5-who-risk.mdx
@@ -10,7 +10,7 @@ The most at risk populations today are the elderly. To [quote](https://virologyd
 
 The younger you are, in general, the less likely you are to experience serious symptoms. This is particularly true if you do not suffer from potential complicating factors such as asthma or other respiratory ailments. 
 
-It appears that men may be more suceptible to severe infections than women. Per the [New York Times](https://www.nytimes.com/2020/02/29/health/coronavirus-flu.html?auth=login-email&login=email):
+It appears that men may be more susceptible to severe infections than women. Per the [New York Times](https://www.nytimes.com/2020/02/29/health/coronavirus-flu.html?auth=login-email&login=email):
 
 > Death rates among men infected with the coronavirus in China, particularly those in their late 40s and older, have exceeded those among women, a pattern not seen in the seasonal flu. The reason for the discrepancy is not known, although Chinese men do smoke more, often resulting in compromised lung function.
 
