Added CDC factsheet link

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -17,3 +17,6 @@ description: 'This is a link to various resources regarding the outbreak'
 ### Regularly Updated Confirmed Case Numbers
 * Global raw numbers mapped, courtesy [Johns Hopkins CSSE](https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6)
 * Bay area coronavirus map and tracker (paywall), [San Francisco Chronicle](https://projects.sfchronicle.com/2020/coronavirus-map/) 
+
+### Fact Sheets and Other Reference Material
+* One page fact sheet entitled "What You Need to Know About the doronavirus 2019 disease (COVID-19)," [CDC](https://www.cdc.gov/coronavirus/2019-ncov/downloads/2019-ncov-factsheet.pdf)
