--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -20,3 +20,6 @@ description: 'This is a link to various resources regarding the outbreak'
 
 ### Fact Sheets and Other Reference Material
 * One page fact sheet entitled "What You Need to Know About the doronavirus 2019 disease (COVID-19)," [CDC](https://www.cdc.gov/coronavirus/2019-ncov/downloads/2019-ncov-factsheet.pdf)
+
+### Donate Compute Resources
+* Project to donate unused computational resources to research efforts around 2019-nCoV, [Folding@Home](https://foldingathome.org/2020/02/27/foldinghome-takes-up-the-fight-against-covid-19-2019-ncov/) 
