Added NPR child resource explainer

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -20,3 +20,4 @@ description: 'This is a link to various resources regarding the outbreak'
 
 ### Fact Sheets and Other Reference Material
 * One page fact sheet entitled "What You Need to Know About the doronavirus 2019 disease (COVID-19)," [CDC](https://www.cdc.gov/coronavirus/2019-ncov/downloads/2019-ncov-factsheet.pdf)
+* Comic/zine-style coronavirus explainer for children, [NPR](https://www.npr.org/sections/goatsandsoda/2020/02/28/809580453/just-for-kids-a-comic-exploring-the-new-coronavirus?utm_source=twitter.com&utm_medium=social&utm_campaign=npr&utm_term=nprnews)
