--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -16,7 +16,7 @@ description: 'This is a link to various resources regarding the outbreak'
 
 ### Regularly Updated Confirmed Case Numbers
 * Global raw numbers mapped, courtesy [Johns Hopkins CSSE](https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6)
-* United State numbers and data, aggregated by State ([methodology explanation](https://docs.google.com/document/d/1YGpQ-LCzGMpO1_dJQGGsXgssEsu2LIQS8Vzspz81quA/edit)), [Alexis Madrigal / Jeff Hammerbacher](https://docs.google.com/spreadsheets/d/18oVRrHj3c183mHmq3m89_163yuYltLNlOmPerQ18E8w/htmlview?sle=true#)  
+* United States numbers and data, aggregated by State ([methodology explanation](https://docs.google.com/document/d/1YGpQ-LCzGMpO1_dJQGGsXgssEsu2LIQS8Vzspz81quA/edit)), [Alexis Madrigal / Jeff Hammerbacher](https://docs.google.com/spreadsheets/d/18oVRrHj3c183mHmq3m89_163yuYltLNlOmPerQ18E8w/htmlview?sle=true#)  
 * Bay area coronavirus map and tracker (paywall), [San Francisco Chronicle](https://projects.sfchronicle.com/2020/coronavirus-map/)
 
 ### Fact Sheets and Other Reference Material
