Updated supplies list with reasoning

--- a/content/Response/5-stock-up.mdx
+++ b/content/Response/5-stock-up.mdx
@@ -5,6 +5,8 @@ description: 'This describes the potential responses in terms of supplies to COV
 
 Most experts at this point are recommending having [two weeks](https://www.ready.gov/pandemic) to a [month's](https://www.nytimes.com/article/prepare-for-coronavirus.html?auth=login-email&login=email#link-62bb1371) worth of food and household supplies on hand. These should be non-perishable in nature. 
 
+One important note is that stocking up is not because supply chains or basic services will necessarily be disrupted. Power, water and so on are likely to be in service throughout. If you or a family member becomes sick, however, it is important to have the supplies on hand to allow you to self-isolate without putting others in your community at risk. 
+
 Recommendations include: 
 
 ### Food
