Updated supplies list with medicine and chidrens medicine suggestions

--- a/content/Response/5-stock-up.mdx
+++ b/content/Response/5-stock-up.mdx
@@ -25,6 +25,8 @@ Recommendations include:
 * Paper towels
 * Hand soap
 * Painkillers (Acetaminophen, Aspirin, Ibuprofen)
+* Cough medicines (Delsym, NyQuil, etc)
+* Children's painkillers / cough medicines
 * Laundry detergent
 * Toothpaste
 * Shampoo
