Updated supplies list with food suggestions

--- a/content/Response/5-stock-up.mdx
+++ b/content/Response/5-stock-up.mdx
@@ -18,6 +18,8 @@ Recommendations include:
 * Nuts & Nut Butter
 * Oil
 * Spices
+* Frozen meat and seafood
+* Tinned fish
 * Pet food
 
 ### Household Supplies
