Updated supplies list with more food suggestions

--- a/content/Response/5-stock-up.mdx
+++ b/content/Response/5-stock-up.mdx
@@ -21,6 +21,8 @@ Recommendations include:
 * Frozen meat and seafood
 * Tinned fish
 * Pet food
+* Coffee, tea 
+* Alcohol
 
 ### Household Supplies
 * Toilet paper
