Added home healthcare recommendations link

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -23,5 +23,8 @@ description: 'This is a link to various resources regarding the outbreak'
 * One page fact sheet entitled "What You Need to Know About the doronavirus 2019 disease (COVID-19)," [CDC](https://www.cdc.gov/coronavirus/2019-ncov/downloads/2019-ncov-factsheet.pdf)
 * Comic/zine-style coronavirus explainer for children, [NPR](https://www.npr.org/sections/goatsandsoda/2020/02/28/809580453/just-for-kids-a-comic-exploring-the-new-coronavirus?utm_source=twitter.com&utm_medium=social&utm_campaign=npr&utm_term=nprnews)
 
+### Home Healthcare Recommendations
+* Suggestions for healthcare in a home setting, [Reddit](https://www.reddit.com/r/Coronavirus/comments/f513zm/nursing_101_caring_for_your_loved_ones_at_home/)
+
 ### Donate Compute Resources
 * Project to donate unused computational resources to research efforts around 2019-nCoV, [Folding@Home](https://foldingathome.org/2020/02/27/foldinghome-takes-up-the-fight-against-covid-19-2019-ncov/) 
