Added Google curated playlist link

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -3,6 +3,9 @@ title: 'Resources'
 description: 'This is a link to various resources regarding the outbreak'
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLbpi6ZahtOH5PLTT1yfXxcxDsNM40N1uG" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[Expert Tips on COVID-19 Best Practices], Google curated YouTube [playlist](https://www.youtube.com/playlist?list=PLbpi6ZahtOH5PLTT1yfXxcxDsNM40N1uG)
+
 ### First Hand Accounts
 * Account of Sarah Churgin, Hong Kong resident and zoological veterinarian, [Facebook](https://www.facebook.com/photo.php?fbid=10117141574843484&set=a.930795251774&type=3&theater)
 
