--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -9,7 +9,7 @@ Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https:
 
 ### First Hand Accounts & AMAs
 * Account of Sarah Churgin, Hong Kong resident and zoological veterinarian, [Facebook](https://www.facebook.com/photo.php?fbid=10117141574843484&set=a.930795251774&type=3&theater)
-* AMA with Dr. Ali Raja, Vice Chair of the Department of Emergency Medicine at Mass General Hospital Dr. Shuhan He, Emergency Medicine physician at Mass General Hospital, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgy7rg/im_dr_ali_raja_vice_chair_of_the_department_of/)
+* AMA with Dr. Ali Raja, Vice Chair of the Department of Emergency Medicine at Mass General Hospital and Dr. Shuhan He, Emergency Medicine physician at Mass General Hospital, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgy7rg/im_dr_ali_raja_vice_chair_of_the_department_of/)
 * AMA with anonymous physician from a UK HCID (high consequence infectious diseases) unit, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgfspi/im_a_critical_care_doctor_working_in_a_uk_hcid/)
 
 ### Interviews 
