Collapsed AMA and interview categories

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -7,12 +7,10 @@ description: 'This is a link to various resources regarding the outbreak'
 
 Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https://www.youtube.com/playlist?list=PLbpi6ZahtOH5PLTT1yfXxcxDsNM40N1uG)
 
-### First Hand Accounts & AMAs
+### First Hand Accounts, AMAs and Interviews
 * Account of Sarah Churgin, Hong Kong resident and zoological veterinarian, [Facebook](https://www.facebook.com/photo.php?fbid=10117141574843484&set=a.930795251774&type=3&theater)
 * AMA with Dr. Ali Raja, Vice Chair of the Department of Emergency Medicine at Mass General Hospital and Dr. Shuhan He, Emergency Medicine physician at Mass General Hospital, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgy7rg/im_dr_ali_raja_vice_chair_of_the_department_of/)
 * AMA with anonymous physician from a UK HCID (high consequence infectious diseases) unit, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgfspi/im_a_critical_care_doctor_working_in_a_uk_hcid/)
-
-### Interviews 
 * Interview with WHO Assistant Director General and veteran epidemiologist Bruce Aylward, [VOX Media](https://www.vox.com/2020/3/2/21161067/coronavirus-covid19-china)
 * Interview (audio) with Eric J. Rubin, M.D., Ph.D., Lindsey R. Baden, M.D., and Stephen Morrissey, Ph.D. on preparing for the spread of COVID-19, [New England Journal of Medicine](https://www.nejm.org/doi/full/10.1056/NEJMe2003319)
 
