Added information on physician comments and disinformation

--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -13,6 +13,7 @@ Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https:
 * AMA with anonymous physician from a UK HCID (high consequence infectious diseases) unit, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgfspi/im_a_critical_care_doctor_working_in_a_uk_hcid/)
 * Interview with WHO Assistant Director General and veteran epidemiologist Bruce Aylward, [VOX Media](https://www.vox.com/2020/3/2/21161067/coronavirus-covid19-china)
 * Interview (audio) with Eric J. Rubin, M.D., Ph.D., Lindsey R. Baden, M.D., and Stephen Morrissey, Ph.D. on preparing for the spread of COVID-19, [New England Journal of Medicine](https://www.nejm.org/doi/full/10.1056/NEJMe2003319)
+* Long thread with real-time comments from various medical professionals (), [Reddit](https://www.reddit.com/r/medicine/comments/fhfz1p/megathread_covid19sarscov2_march_12th_2020/)
 
 ### Personal Perspectives from Medical Professionals
 * Email to her family from Juliana Grant, MD MPH, [Personal Blog](https://www.julianagrant.com/blog/2020/2/29/coronavirus)
@@ -29,6 +30,9 @@ Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https:
 
 ### Home Healthcare Recommendations
 * Suggestions for healthcare in a home setting, [Reddit](https://www.reddit.com/r/Coronavirus/comments/f513zm/nursing_101_caring_for_your_loved_ones_at_home/)
+
+### Disinformation and Misinformation
+* Disinforation expert discusses how to sift through false information regarding the outbreak, [FPRI](https://www.fpri.org/fie/disinformation-outbreak-coronavirus/)
 
 ### Donate Compute Resources
 * Project to donate unused computational resources to research efforts around 2019-nCoV, [Folding@Home](https://foldingathome.org/2020/02/27/foldinghome-takes-up-the-fight-against-covid-19-2019-ncov/) 
