--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -13,7 +13,7 @@ Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https:
 * AMA with anonymous physician from a UK HCID (high consequence infectious diseases) unit, [Reddit](https://www.reddit.com/r/Coronavirus/comments/fgfspi/im_a_critical_care_doctor_working_in_a_uk_hcid/)
 * Interview with WHO Assistant Director General and veteran epidemiologist Bruce Aylward, [VOX Media](https://www.vox.com/2020/3/2/21161067/coronavirus-covid19-china)
 * Interview (audio) with Eric J. Rubin, M.D., Ph.D., Lindsey R. Baden, M.D., and Stephen Morrissey, Ph.D. on preparing for the spread of COVID-19, [New England Journal of Medicine](https://www.nejm.org/doi/full/10.1056/NEJMe2003319)
-* Long thread with real-time comments from various medical professionals (), [Reddit](https://www.reddit.com/r/medicine/comments/fhfz1p/megathread_covid19sarscov2_march_12th_2020/)
+* Long thread with real-time comments from various on-the-ground medical professionals, [Reddit](https://www.reddit.com/r/medicine/comments/fhfz1p/megathread_covid19sarscov2_march_12th_2020/)
 
 ### Personal Perspectives from Medical Professionals
 * Email to her family from Juliana Grant, MD MPH, [Personal Blog](https://www.julianagrant.com/blog/2020/2/29/coronavirus)
