--- a/content/Response/4-responses.mdx
+++ b/content/Response/4-responses.mdx
@@ -15,7 +15,7 @@ Make a practice of washing your hands regularly, particularly before and after m
 ### Social Distancing
 Maintain a distance of at least three feet away from anyone visibly sick. Depending on conditions in your local area, avoidance of large scale (concerts, sporting events, etc) or even small scale (grocery, restaurant, etc) venues may become necessary. It's possible that self-isolation becomes necessary for some period of time, which is why many resources recommend having non-perishable food stores on hand. A list of recommended supplies is available [here](https://covidfaq.org/Response/5-stock-up). 
 
-### Avoid Touching You Face, Hands, Mouth
+### Avoid Touching Your Face, Hands, Mouth
 It is not known precisely how long the virus can survive on exposed surfaces, but health organizations consistently recommend the avoidance of touching your face. Any of your eyes, nose and mouth can provide a vector by which the virus enters the body and infects you. 
 
 ### Plan, Don't Panic
