--- a/content/Resources.mdx
+++ b/content/Resources.mdx
@@ -14,6 +14,7 @@ Expert Tips on COVID-19 Best Practices, Google curated YouTube [playlist](https:
 * Interview with WHO Assistant Director General and veteran epidemiologist Bruce Aylward, [VOX Media](https://www.vox.com/2020/3/2/21161067/coronavirus-covid19-china)
 * Interview (audio) with Eric J. Rubin, M.D., Ph.D., Lindsey R. Baden, M.D., and Stephen Morrissey, Ph.D. on preparing for the spread of COVID-19, [New England Journal of Medicine](https://www.nejm.org/doi/full/10.1056/NEJMe2003319)
 * Long thread with real-time comments from various on-the-ground medical professionals, [Reddit](https://www.reddit.com/r/medicine/comments/fhfz1p/megathread_covid19sarscov2_march_12th_2020/)
+* University of California, San Francisco Panel discussion of epidemiologists, immunologists and infectious disease researchers, [LinkedIn](https://www.linkedin.com/content-guest/article/notes-from-ucsf-expert-panel-march-10-dr-jordan-shlain-m-d-/)
 
 ### Personal Perspectives from Medical Professionals
 * Email to her family from Juliana Grant, MD MPH, [Personal Blog](https://www.julianagrant.com/blog/2020/2/29/coronavirus)
